--- a/test/config/one_server_block.conf
+++ b/test/config/one_server_block.conf
@@ -1,7 +1,7 @@
 server {
 	server_name webserv.com;
 	listen 127.0.0.1:1024;
-	error_page html/404.html;
+	error_page 404 html/404.html;
 	client_max_body 1024;
 
 	location {
