--- a/test/config/one_server_block.conf
+++ b/test/config/one_server_block.conf
@@ -4,7 +4,7 @@ server {
 	error_page 404 html/404.html;
 	client_max_body 1024;
 
-	location {
+	location /html {
 		methods GET;
 		return 301 /html/index.html;
 		root /tmp/www;
