add parse listen, error page, client max body size

--- a/test/config/one_server_block.conf
+++ b/test/config/one_server_block.conf
@@ -1,5 +1,5 @@
 server {
-	server_name webserv.com
+	server_name webserv.com www.webserv.com
 	listen 127.0.0.1:1024
 	error_page 404 404.html
 	client_max_body 1024
