imbriquage des classes, implementation du config file, fix derreur

--- a/config/default.conf
+++ b/config/default.conf
@@ -5,7 +5,8 @@ server {
 	index index.html
 	root html
 	autoindex on
-	return 301 301.html
+	error_page 404 /errors/404.html
+	return 404 /errors/404.html
 	cgi_allowed_ext .php
 	upload_path download
 	methods GET DELETE POST
