--- a/config/multiple_servers.conf
+++ b/config/multiple_servers.conf
@@ -9,7 +9,7 @@ server {
 	return 301 301.html
 	cgi_allowed_ext .php
 	upload_path download
-	methods GET DELETE POST
+	methods DELETE POST
 }
 
 server {
