push before crash

--- a/config/default.conf
+++ b/config/default.conf
@@ -10,4 +10,15 @@ server {
 	cgi_allowed_ext .php
 	upload_path download
 	methods GET DELETE POST
+
+	location /html {
+		methods GET
+		return 301 /html/index.html
+		root /tmp/www
+		autoindex on
+		index html/index.html
+		cgi_allowed_ext .php
+		upload_path /download
+		error_page 404 html/error/404.html
+	}
 }
