--- a/test/config/test.conf
+++ b/test/config/test.conf
@@ -1,84 +1,42 @@
 server {
 	server_name un.com
-	listen 127.0.0.1:1024
-	client_max_body 1048576
-	error_page 404 404.html
-	index index.html
-	root html
-	autoindex on
-	return 301 301.html
-	cgi_allowed_ext .php
-	upload_path download
+	listen 127.0.0.2:1024
 	methods GET DELETE POST
 }
 
 server {
 	server_name deux.com
 	listen 127.0.0.1:1025
-	client_max_body 1048576
-	error_page 404 404.html
-	index index.html
-	root html
-	autoindex on
-	return 301 301.html
-	cgi_allowed_ext .php
-	upload_path download
 	methods GET DELETE POST
 }
 
 server {
 	server_name trois.com
 	listen 127.0.0.1
-	client_max_body 1048576
-	error_page 404 404.html
-	index index.html
-	root html
-	autoindex on
-	return 301 301.html
-	cgi_allowed_ext .php
-	upload_path download
 	methods GET DELETE POST
 }
 
 server {
 	server_name quatre.com
 	listen 127.0.0.2:1025
-	client_max_body 1048576
-	error_page 404 404.html
-	index index.html
-	root html
-	autoindex on
-	return 301 301.html
-	cgi_allowed_ext .php
-	upload_path download
 	methods GET DELETE POST
 }
 
 server {
 	server_name cinq.com
 	listen 127.0.0.2:1025
-	client_max_body 1048576
-	error_page 404 404.html
-	index index.html
-	root html
-	autoindex on
-	return 301 301.html
-	cgi_allowed_ext .php
-	upload_path download
 	methods GET DELETE POST
 }
 
 server {
 	server_name sept.com
 	listen 127.0.0.2
-	client_max_body 1048576
-	error_page 404 404.html
-	index index.html
-	root html
-	autoindex on
-	return 301 301.html
-	cgi_allowed_ext .php
-	upload_path download
+	methods GET DELETE POST
+}
+
+server {
+	server_name huit.com
+	listen 127.0.0.1:1024
 	methods GET DELETE POST
 }
 
