post multipart in progress

--- a/config/default.conf
+++ b/config/default.conf
@@ -2,7 +2,7 @@ server {
 	server_name webserv.com www.webserv.com
 	listen 127.0.0.1:1024
 	client_max_body 1048576
-	index index.html
+	index uploading.html
 	root html
 	autoindex on
 	error_page 404 /errors/404.html
