post multipart work with vector<char>

--- a/config/default.conf
+++ b/config/default.conf
@@ -8,7 +8,7 @@ server {
 	error_page 404 /errors/404.html
 	return 404 /errors/404.html
 	cgi_allowed_ext .php
-	upload_path download
+	upload_path /upload
 	methods GET DELETE POST
 
 	location /html {
@@ -18,7 +18,7 @@ server {
 		autoindex on
 		index html/index.html
 		cgi_allowed_ext .php
-		upload_path /download
+		upload_path /upload
 		error_page 404 html/error/404.html
 	}
 }
