--- a/config/default.conf
+++ b/config/default.conf
@@ -11,7 +11,7 @@ server {
 	upload_path download
 	methods GET DELETE POST
 
-	location /html {
+	location / {
 		methods GET
 		return 301 /html/index.html
 		root /tmp/www
@@ -20,5 +20,20 @@ server {
 		cgi_allowed_ext .php
 		upload_path /download
 		error_page 404 html/error/404.html
+	}
+	location /redirect {
+		methods GET
+		return 415 https://www.youtube.com
+		upload_path /download
+	}
+		location /pages {
+		methods GET
+		upload_path /download
+		index /page1.html
+	}
+	location /redirect2 {
+		methods GET
+		return 415 /
+		upload_path /download
 	}
 }
