clean code before merge

--- a/config/default.conf
+++ b/config/default.conf
@@ -10,30 +10,16 @@ server {
 	cgi_allowed_ext .php
 	upload_path /upload
 	methods GET DELETE POST
-
-	location / {
-		methods GET
-		return 301 /html/index.html
-		root /tmp/www
-		autoindex on
-		index html/index.html
-		cgi_allowed_ext .php
-		upload_path /upload
-		error_page 404 html/error/404.html
-	}
 	location /redirect {
+		index /index.txt
 		methods GET
-		return 415 https://www.youtube.com
-		upload_path /download
+		return 200 https://profile.intra.42.fr/
 	}
 	location /pages {
 		methods GET
-		upload_path /download
 		index /page1.html
 	}
-	location /redirect2 {
-		methods GET
-		return 415 /
-		upload_path /download
+	location /upload {
+		methods DELETE
 	}
 }
