--- a/config/default.conf
+++ b/config/default.conf
@@ -7,7 +7,7 @@ server {
 	autoindex on
 	error_page 404 /errors/404.html
 	return 404 /errors/404.html
-	cgi_allowed_ext .php
+	cgi_allowed_ext .pl .py .php
 	upload_path /upload
 	methods GET DELETE POST
 	location /redirect {
@@ -16,10 +16,11 @@ server {
 		return 200 https://profile.intra.42.fr/
 	}
 	location /pages {
+		autoindex off
 		methods GET
 		index /page1.html
 	}
 	location /upload {
-		methods GET POST DELETE
+		methods GET DELETE
 	}
 }
