--- a/config/default.conf
+++ b/config/default.conf
@@ -4,7 +4,7 @@ server {
 	client_max_body 1048576
 	index index.html
 	root html
-	autoindex on
+	autoindex off
 	error_page 404 /errors/404.html
 	return 404 /errors/404.html
 	cgi_allowed_ext .pl .py .php
