removing the throw

--- a/config/default.conf
+++ b/config/default.conf
@@ -16,8 +16,8 @@ server {
 		return 200 https://profile.intra.42.fr/
 	}
 	location /pages {
-		autoindex off
-		methods GET
+		autoindex on
+		methods GET POST
 		index /page1.html
 	}
 	location /upload {
