--- a/config/multiple_servers.conf
+++ b/config/multiple_servers.conf
@@ -1,6 +1,6 @@
 server {
 	server_name webserv.com
-	listen 127.0.0.1:1024
+	listen 127.0.0.1:8080
 	client_max_body 1048576
 	error_page 404 4xx.html
 	index index.html
@@ -12,8 +12,8 @@ server {
 }
 
 server {
-	server_name server.com
-	listen 10.12.4.14:1024
+	server_name sserver.com
+	listen 127.0.0.1:8080
 	client_max_body 1048576
 	error_page 404 404.html
 	root html/pages
