--- a/config/default.conf
+++ b/config/default.conf
@@ -6,23 +6,51 @@ server {
 	root html
 	autoindex off
 	error_page 404 /errors/404.html
-	return 404 /errors/404.html
 	cgi_allowed_ext .pl .py .php
 	upload_path /upload
-	methods GET DELETE POST
+	methods GET POST
 	location /redirect {
 		index /index.txt
 		methods GET
-		return 200 https://profile.intra.42.fr/
+		return 404 https://profile.intra.42.fr/
 	}
 	location /pages {
+		index page1.html
 		autoindex on
 		methods GET POST
-		autoindex off
-		methods GET POST
-		index /page1.html
 	}
 	location /upload {
+		autoindex on
+		methods GET DELETE
+	}
+	location /cgi {
+		autoindex on
+	}
+}
+
+server {
+	server_name webserv.com www.webserv.com
+	listen 127.0.0.1:8181
+	client_max_body 1048576
+	index index.html
+	root html
+	autoindex on
+	error_page 404 /errors/404.html
+	cgi_allowed_ext .pl .py .php
+	upload_path /upload
+	methods GET POST
+	location /redirect {
+		index /index.txt
+		methods GET
+		return 404 https://www.youtube.com/
+	}
+	location /pages {
+		index page1.html
+		autoindex off
+		methods GET POST
+	}
+	location /upload {
+		autoindex on
 		methods GET DELETE
 	}
 }
