--- a/config/multiple_servers.conf
+++ b/config/multiple_servers.conf
@@ -1,22 +1,55 @@
 server {
 	server_name webserv.com
-	listen 127.0.0.1:8080
+	listen 8080
 	client_max_body 1048576
-	error_page 404 4xx.html
 	index index.html
-	autoindex on
-	return 301 301.html
-	cgi_allowed_ext .php
-	upload_path html/upload
+	root html
+	error_page 404 /errors/404.html
+	cgi_allowed_ext .pl .php
+	upload_path /upload
 	methods GET POST
+	location /redirect {
+		methods GET
+		return 404 https://www.youtube.com/watch?v=dQw4w9WgXcQ&ab_channel=RickAstley
+	}
+	location /pages {
+		autoindex on
+		methods GET POST
+	}
+	location /upload {
+		autoindex on
+		methods GET DELETE
+	}
+	location /cgi {
+		autoindex on
+	}
 }
 
 server {
-	server_name sserver.com
-	listen 127.0.0.1:8080
-	client_max_body 1048576
-	error_page 404 404.html
-	root html/pages
-	autoindex on
-	methods GET
+	server_name webserv.fr
+	listen 8080
 }
+
+server {
+	autoindex on
+	server_name webserv.fr
+	listen 8081
+	client_max_body 1048576
+	index index.html
+	root html
+	cgi_allowed_ext .pl .py .php
+	upload_path /upload
+	methods GET POST
+	location /redirect {
+		methods GET
+		return 404 https://profile.intra.42.fr/
+	}
+	location /upload {
+		methods GET DELETE
+	}
+}
+
+server {
+	listen 1234
+}
+
